# electronix

./: $null  .gitignore  .gitmodules  BUILD.md  CHANGELOG.md  Cargo.toml  Makefile  build.ps1  package.json
.cargo/: config.toml
.github/workflows/: release.yml
_dist/: run.ps1
_dist/public/: index.html  solder_fatigue.json
_dist/public/assets/: index-BYZ24Fyn.js  index-BowuTyyq.css
scripts/: gen_signing_key.ps1  setup_github_release.md
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
validation/case_01_darveaux2000_pbga256/: README.md  bga256.kicad_mod  board.scad  build_stls.ps1  expected.yaml
validation/tools/: .gitignore  bga256.kicad_mod  ukbfg.py  ukbfg_cli.py
