[package]
name    = "electronix"
version = "0.1.0"
edition = "2021"

# Tauri needs a lib + a bin entry point
[lib]
name       = "electronix_lib"
crate-type = ["rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri               = { version = "2", features = ["protocol-asset"] }
tauri-plugin-dialog = "2"
serde               = { version = "1", features = ["derive"] }
serde_json          = "1"
tokio               = { version = "1", features = ["rt", "rt-multi-thread", "sync"] }
tauri-plugin-fs = "2"
